:bug: Fix overflow on flex child

--- a/frontend/scss/components/templates/what-is-amp.scss
+++ b/frontend/scss/components/templates/what-is-amp.scss
@@ -36,6 +36,10 @@
 
   .#{utility('container-fluid')} {
     @include container-fluid;
+    
+    > * {
+      min-width: 0;
+    }
   }
 
 
